Project

General

Profile

Actions

Bug #44815

closed

Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly)

Added by Aleksei Gutikov about 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Pool stats like num_objects, num_bytes, increased after PGs were merged after manual set pg_num.

Steps to reproduce (nautilus):

# run cluster with vstart.sh
./bin/ceph osd pool create test 8 8
./bin/rados bench -p test 2 write --no-cleanup
# wait until stats synced
./bin/ceph df
./bin/ceph osd pool set default.rgw.buckets.data pg_num 4
# wait until pgs merged
./bin/ceph df

Also you can compare pool stats and sum of pg stats from pg dump.

# test pool has id=5
$ ./bin/ceph pg dump --format=json | jq '(.pg_map.pool_stats[] | select(.poolid == 5) | .stat_sum.num_objects ) - ([.pg_map.pg_stats[] | select(.pgid | startswith("5.")) | .stat_sum.num_objects] | add)'

This stats inconsistency disappear after mgr restart.

Reproduced on 14.2.8 and master (with pg_autoscale_mode off).


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #46964: octopus: Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly)ResolvedNathan CutlerActions
Copied to RADOS - Backport #46965: nautilus: Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly)ResolvedNathan CutlerActions
Actions #2

Updated by Greg Farnum about 4 years ago

  • Project changed from Ceph to RADOS
  • Subject changed from Pool stats increase after PG merged. to Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly)
  • Status changed from New to Fix Under Review
  • Pull request ID set to 34289
Actions #3

Updated by Kefu Chai almost 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Kefu Chai almost 4 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to nautilus, octopus
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46964: octopus: Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly) added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46965: nautilus: Pool stats increase after PG merged (PGMap::apply_incremental doesn't subtract stats correctly) added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF